--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   },
   "dependencies": {
     "@types/bun": "^1.1.0",
+    "bytebuffer": "^5.0.1",
+    "libsodium-wrappers-sumo": "^0.7.13",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/bytebuffer": "^5.0.48",
+    "@types/libsodium-wrappers-sumo": "^0.7.8",
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
