--- a/proxy/package.json
+++ b/proxy/package.json
@@ -9,10 +9,17 @@
   "author": "Viktor Shchelochkov <hi@hloth.dev> (https://hloth.dev)",
   "license": "ISC",
   "devDependencies": {
+    "@types/libsodium-wrappers-sumo": "^0.7.8",
+    "@types/lodash": "^4.17.0",
     "eslint": "^8.57.0"
   },
   "dependencies": {
     "bunrest": "^1.3.8",
-    "cors": "^2.8.5"
+    "bytebuffer": "^5.0.1",
+    "cors": "^2.8.5",
+    "libsodium-wrappers-sumo": "^0.7.13",
+    "lodash": "^4.17.21",
+    "p-retry": "^4.2.0",
+    "zod": "^3.23.4"
   }
 }
