--- a/proxy/package.json
+++ b/proxy/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "bun src/index.ts"
+    "start": "bun src/index.ts",
+    "postinstall": "bunx patch-package"
   },
   "keywords": [],
   "author": "Viktor Shchelochkov <hi@hloth.dev> (https://hloth.dev)",
