--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "protobuf": "pbjs --target static-module --wrap commonjs --out src/shared/api/signal-service/compiled.js protos/*.proto && pbts --out src/shared/api/signal-service/compiled.d.ts src/shared/api/signal-service/compiled.js --force-long",
+    "protobuf": "pbjs --target static-module --wrap es6 --out src/shared/api/signal-service/compiled.js protos/*.proto && pbts --out src/shared/api/signal-service/compiled.d.ts src/shared/api/signal-service/compiled.js --force-long",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,8 +18,10 @@
     "crc": "^4.3.2",
     "libsodium-wrappers-sumo": "^0.7.13",
     "lodash": "^4.17.21",
+    "protobufjs": "^7.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/bytebuffer": "^5.0.48",
@@ -30,7 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "protobufjs": "^7.2.4",
+    "protobufjs-cli": "^1.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.34.1",
