--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-http-backend": "^2.5.1",
     "libsodium-wrappers-sumo": "^0.7.13",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.376.0",
     "protobufjs": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
