--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/bun": "^1.1.0",
     "buffer": "^6.0.3",
     "bytebuffer": "^5.0.1",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "crc": "^4.3.2",
+    "dexie": "^4.0.4",
+    "dexie-react-hooks": "^1.1.7",
     "i18next": "^23.11.3",
     "i18next-http-backend": "^2.5.1",
     "libsodium-wrappers-sumo": "^0.7.13",
@@ -29,8 +39,11 @@
     "react-i18next": "^14.1.1",
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
+    "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.0",
-    "sonner": "^1.4.41"
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bytebuffer": "^5.0.48",
