--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dexie-react-hooks": "^1.1.7",
     "i18next": "^23.11.3",
     "i18next-http-backend": "^2.5.1",
+    "install": "^0.13.0",
     "libsodium-wrappers-sumo": "^0.7.13",
     "lodash": "^4.17.21",
     "lucide-react": "^0.376.0",
@@ -41,9 +42,13 @@
     "react-redux": "^9.1.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.0",
+    "redux-persist": "^6.0.0",
+    "remove": "^0.1.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-svg-loader": "^5.1.0"
   },
   "devDependencies": {
     "@types/bytebuffer": "^5.0.48",
