--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -43,11 +44,13 @@
     "react-redux": "^9.1.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.0",
+    "react-textarea-autosize": "^8.5.3",
     "redux-persist": "^6.0.0",
     "remove": "^0.1.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vite-plugin-svgr": "^4.2.0",
     "vite-svg-loader": "^5.1.0"
   },
@@ -57,6 +60,7 @@
     "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
