--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -22,6 +23,8 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/bun": "^1.1.0",
+    "argon2-browser": "^1.18.0",
+    "blake2b": "^2.1.4",
     "buffer": "^6.0.3",
     "bytebuffer": "^5.0.1",
     "class-variance-authority": "^0.7.0",
@@ -55,6 +58,8 @@
     "vite-svg-loader": "^5.1.0"
   },
   "devDependencies": {
+    "@types/argon2-browser": "^1.18.4",
+    "@types/blake2b": "^2.1.3",
     "@types/bytebuffer": "^5.0.48",
     "@types/libsodium-wrappers-sumo": "^0.7.8",
     "@types/lodash": "^4.17.0",
@@ -74,6 +79,8 @@
     "protobufjs-cli": "^1.1.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-top-level-await": "^1.4.1",
+    "vite-plugin-wasm": "^3.3.0"
   }
 }
