--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "crc": "^4.3.2",
     "dexie": "^4.0.4",
     "dexie-react-hooks": "^1.1.7",
+    "fake-indexeddb": "^5.0.2",
     "i18next": "^23.11.3",
     "i18next-http-backend": "^2.5.1",
     "install": "^0.13.0",
