--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/global.d.ts"],
   "exclude": ["proxy"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
