--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Viktor Shchelochkov <hi@hloth.dev> (https://hloth.dev)",
   "scripts": {
     "dev": "VITE_GIT_COMMIT_HASH=$(git rev-parse HEAD) vite",
-    "build": "VITE_GIT_COMMIT_HASH=$(git rev-parse HEAD) vite build",
+    "build": "bun run protobuf && VITE_GIT_COMMIT_HASH=$(git rev-parse HEAD) vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "protobuf": "pbjs --target static-module --wrap es6 --out src/shared/api/signal-service/compiled.js protos/*.proto && pbts --out src/shared/api/signal-service/compiled.d.ts src/shared/api/signal-service/compiled.js --force-long",
     "preview": "vite preview"
